--- a/client/src/App.css
+++ b/client/src/App.css
@@ -212,3 +212,10 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.admin-option {
+  display: flex;
+  width: 60vw;
+  align-items: center;
+  justify-content: space-around;
+}
