--- a/client/src/App.css
+++ b/client/src/App.css
@@ -219,3 +219,17 @@
   align-items: center;
   justify-content: space-around;
 }
+
+.float-add-button {
+  position: absolute;
+  bottom: 10%;
+  right: 5%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 75px;
+  height: 75px;
+  background-color: green;
+}
