--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,6 +37,12 @@
   color: white;
 }
 
+.invoice-titles {
+  padding: 10px;
+  font-size: 20px;
+  font-weight: 600;
+}
+
 .box {
   width: 100vw;
   height: 50px;
@@ -53,22 +59,56 @@
 .home-title {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   width: 100vw;
   height: 60px;
-  background-color: orange;
+  border-bottom: 3px solid black;
+  /* background-color: orange; */
 }
 
 .home-username {
   width: auto;
-  padding: 0px 50px;
+  padding: 0px 100px;
+  font-weight: 600;
+}
+
+.home-username-ele {
+  padding: 5px 10px;
+}
+
+.extend-collapse {
+  font-size: 20px;
+  font-weight: 600;
+}
+.button-style {
+  background-color: white;
+  border: 2px solid #ff4f5a;
+  font-weight: 600;
+  border-radius: 10px;
+  color: #ff4f5a;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.botton-style-dark {
+  background-color: #ff4f5a;
+  color: white;
+  border: 2px solid white;
+}
+
+.light-green {
+  background-color: lightgreen;
 }
 
 .home-logout {
-  width: auto;
+  width: 250px;
   padding: 0px 50px;
+  display: flex;
 
-  /* justify-content: flex-end; */
+  justify-content: space-between;
 }
 
 .home-body {
@@ -76,11 +116,50 @@
   flex-direction: column;
   align-self: center;
   justify-content: space-between;
-  background-color: yellow;
+  /* background-color: yellow; */
 }
 
 .home-number-invoices {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  justify-content: space-between;
+  border-bottom: 2px solid #ff4f5a;
   padding: 20px 100px;
+}
+
+.invoice-box {
+  /* border: 2px solid #ff4f5a; */
+  padding-top: 20px;
+}
+
+.invoice-user {
+  width: 500px;
+}
+.invoice-name {
+  width: 300px;
+}
+.invoice-date {
+  width: 300px;
+}
+.invoice-amount {
+  width: 300px;
+}
+
+.default-title {
+  border-bottom: 2px solid #ff4f5a;
+}
+
+.default-footer {
+  border-top: 2px solid #ff4f5a;
+  font-weight: 600;
+}
+
+.filter-to-from {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 300px;
 }
 
 .home-all-invoice {
@@ -90,7 +169,7 @@
   width: 80vw;
   padding: 20px 20px;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   /* background-color: black; */
 }
 
@@ -184,6 +263,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  /* width: 100vw; */
   border: 2px solid #ff4f5a;
   border-radius: 60px;
 }
@@ -222,8 +302,8 @@
 
 .float-add-button {
   position: absolute;
-  bottom: 10%;
-  right: 5%;
+  bottom: 5%;
+  right: 2%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -231,5 +311,12 @@
   border-radius: 50%;
   width: 75px;
   height: 75px;
-  background-color: green;
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+  background-color: #ff4f5a;
+}
+
+.create-invoice {
+  padding: 50px 20px;
 }
