--- a/client/src/App.css
+++ b/client/src/App.css
@@ -325,3 +325,50 @@
 .create-invoice {
   padding: 50px 20px;
 }
+
+.loader {
+  border: 10px solid #f3f3f3; /* Light grey */
+  border-top: 10px solid #ff4f5a; /* Blue */
+  border-radius: 50%;
+  padding: 20px;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+}
+
+.loader-invoice {
+  border: 10px solid #f3f3f3; /* Light grey */
+  border-top: 10px solid #ff4f5a; /* Blue */
+  border-radius: 50%;
+  padding: 20px;
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite;
+}
+
+.loader-div {
+  width: auto;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.empty-invoices {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  width: auto;
+  font-size: 20px;
+  font-weight: 600;
+}
